cabal-version:      2.4
name:               nnlib
version:            0.1.0.0
author:             amhsm6
maintainer:         amhsm6@gmail.com

executable nnlib
    main-is:          Main.hs

    build-depends:    base ^>=4.16.4.0
                    , mtl
                    , containers

    hs-source-dirs:   app

    default-language: Haskell2010
